[gd_scene load_steps=7 format=3 uid="uid://boedrr2kgctj5"]

[ext_resource type="Script" uid="uid://dk1thndqx01m1" path="res://scripts/wardrobe/lights/bulb_light_rig.gd" id="1"]
[ext_resource type="Shader" uid="uid://cp1x2348citxk" path="res://assets/shaders/lighting/bulb_visual.gdshader" id="2"]
[ext_resource type="Shader" uid="uid://b40o8k8ns7oxo" path="res://assets/shaders/lighting/bulb_glow.gdshader" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_visual"]
shader = ExtResource("2")
shader_parameter/color = Color(1, 0.8, 0.4, 1)
shader_parameter/glow_strength = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_zone"]
size = Vector2(397.83, 498)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glow"]
shader = ExtResource("3")
shader_parameter/color = Color(1, 0.8, 0.45, 0.69)
shader_parameter/falloff_power = 2.0

[node name="BulbLightRig" type="Node2D"]
script = ExtResource("1")

[node name="Visual" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_visual")
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="LightZone" type="Area2D" parent="."]
position = Vector2(-92, 147)
collision_layer = 0
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightZone"]
position = Vector2(-59, 49)
shape = SubResource("RectangleShape2D_zone")

[node name="LightVisual" type="ColorRect" parent="LightZone/CollisionShape2D"]
visible = false
material = SubResource("ShaderMaterial_glow")
offset_left = -179.0
offset_top = -249.0
offset_right = 179.0
offset_bottom = 249.0
mouse_filter = 2
